--- a/CSS/summerClothes.css
+++ b/CSS/summerClothes.css
@@ -7,3 +7,12 @@ body{
     font-family: Lato,sans-serif;
     font-weight: 400;
 }
+#globalProducts{
+    display: grid;
+    grid-template-columns: 27% 27% 27%;
+    justify-content: space-around;
+}
+#globalProducts img{
+    width: 100%;
+    height: 165px;
+}
