--- a/CSS/summerClothes.css
+++ b/CSS/summerClothes.css
@@ -14,7 +14,52 @@ body{
     line-height: 1.43;
     background-color: #fff;
 }
-#globalProducts{
+
+#filter{
+    display: flex;
+    flex-direction: row;
+    /* border: 1px solid red; */
+    width: 80%;
+    margin: 15px auto;
+    justify-content: space-between;
+}
+.filterBox{
+    width: 30%;
+    border: 1px solid grey;
+    height: 38px;
+    padding: 8px 12px 8px 12px;
+    border-radius: 8px;
+
+}
+.filterBox label{
+    font-size: 10px;
+    margin-left: 4px;
+    color: rgb(146, 143, 143);
+}
+.filterBox select{
+    width: 100%;
+    font-size: 14px;
+    border: none;
+}
+.filterBox select:hover{
+    cursor: pointer;
+}
+
+/* thin horizontal line */
+.hrLine{
+    border-bottom: 1px solid rgb(238, 236, 236);
+    width: 80%;
+    margin: 8px auto;
+}
+
+/* section heading */
+.sectionHead{
+    width: 80%;
+    margin: 45px auto 25px auto;
+}
+
+/* global product list */
+.globalProducts{
     border: 1px solid red;
     width: 80%;
     margin: auto;
