--- a/CSS/productReview.css
+++ b/CSS/productReview.css
@@ -41,3 +41,9 @@ body{
     -webkit-line-clamp: 1; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+.productChart{
+    /* display: flex; */
+}
+.sizeColorBox{
+    display: flex;
+}
