--- a/CSS/productReview.css
+++ b/CSS/productReview.css
@@ -9,78 +9,144 @@ body{
     color: rgba(0, 0, 0, 0.87);
     margin: 0;
     font-size: 0.75rem;
-    font-family: Lato,sans-serif;
+    /* font-family: Lato,sans-serif; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     line-height: 1.43;
     background-color: #fff;
 }
+
+/* outer Container */
 #golabalProduct{
     width: 80%;
     margin: auto;
-    display: grid;
-    grid-template-columns: 40% 8% 50%;
+    display: flex;
     justify-content: space-between;
 }
-#proSubImage{
-    display: flex;
-    flex-direction: column;
-    gap: 6%;
-    align-items: center;
+
+/* left container */
+#leftContainer{
+    width: 48%;
 }
-#proImage img{
+#leftTop{
+    display: flex;
+    justify-content: space-between;
+}
+#productImage{
+    width: 80%;
+}
+#productImage img{
     width: 100%;
 }
-#imgIcon{
-    width: 80%;
-    border: 2px solid #38ACEC;
+#productLogo{
+    cursor: pointer;
+    width: 16%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    align-items: center;
 }
-#proName{
+#productLogoImage img{
+    width: 90%;
+    border: 3px solid #5eb2d9;
+    border-radius: 5px;
+}
+#leftButtom{
+    display: flex;
+    justify-content: space-between;
+}
+.deliveryTime{
+    margin: 18px 0px;
+    text-align: right;
+    font-size: 11px;
+}
+
+/* right container */
+#rightContainer{
+    width: 50%;
+}
+#productName{
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 1; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
-.productChart{
-    margin: 20px 0;
+#optionButton{
+    border: 1px solid rgb(90, 87, 87);
     padding: 15px;
+    margin: 18px 0px;
 }
-.sizeColorWrapper{
+.buttonBox{
     display: flex;
     justify-content: space-between;
-    margin: 10px 0px;
 }
-.sizeColorBox{
-    flex-basis: 14%;
-    border: 1px solid grey;
+.buttonTitle{
+    font-size: 15px;
+    font-weight: 600;
+    margin: 8px 0px ;
+}
+.buttons{
+    border: 1px solid rgb(90, 87, 87);
+    width: 14%;
     height: 60px;
-    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    line-height: 60px;
+    border-radius: 5px;
+    cursor: pointer;
 }
-.sizeColorWrapper > :first-child  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.buttonBox > div:first-child{
     border-radius: 50%;
 }
-.sizeColorWrapper > :last-child  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.buttonBox > div:last-child{
     border-radius: 50%;
 }
-.addToCartBtn{
+
+#addToCartBtn{
     display: flex;
-    justify-content: center;
-    margin: 45px;
+    justify-content: space-between;
 }
-.addToCartBtn button{
-    width: 70%;
-    padding:12px 0px;
-    font-size: 16px;
-    color: white;
+#quantityBox{
+    width: 28%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 18px;
+    cursor: pointer;
+}
+#cartButton{
+    width: 68%;
+}
+#cartButton button{
+    width: 100%;
+    padding: 12px 0;
     background-color: #5eb2d9;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
+}
+#miscellaneous{
+    display: flex;
+    justify-content: space-between;
+}
+.miscellaneousBox{
+    width: 31%;
+    height: 85px;
+}
+
+/* ---------------------------------------------------------------------------- */
+.textGreyColor{
+    color: rgb(90, 87, 87);
+}
+.origin{
+    margin-top: 3px;
+    text-align: right;
+    border: 1px solid blue;
+}
+.boldFont{
+    margin-top: 30px;
+    font-size: 14px;
+    font-weight: bold;
 }
