--- a/shivam.css
+++ b/shivam.css
@@ -10,10 +10,13 @@
     margin: 5px;
     font-size: 0.75rem;
     font-family: Lato,sans-serif;
-     font-weight: 400
+     color: silver;
 }
 .box{
     border: 0.5px solid gray;
+    font-size: 0.75rem;
+    font-family: Lato,sans-serif;
+     color: silver;
 }
 img{
     width: 35px;
@@ -24,7 +27,16 @@ img{
 }
 .box2{
     display: grid;
-    grid-template-columns: 55% 40%;
+    grid-template-columns: 60% 30%;
+    font-size: 0.75rem;
+    font-family: Lato,sans-serif;
+     color: rgb(182, 178, 178);
+     background-image: url("https://media.istockphoto.com/photos/the-gray-and-silver-are-light-black-with-white-the-gradient-is-the-picture-id1190757819?b=1&k=20&m=1190757819&s=170667a&w=0&h=F7KCEroNBnDgqpHeJ3CP-5AsMjmpi2zF4L8Oxhc4RLE=");
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+     position: relative;
+     backface-visibility: initial;
 }
 .subbox{
     display: inline-block;
@@ -38,6 +50,12 @@ img{
     vertical-align: middle;
     gap: 10px;
 }
+h3 a {
+    color:silver;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    }
 
 .help{
     display: inline-block;
@@ -62,7 +80,7 @@ img{
     }
     .help{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         margin: 2px;
     }
     img{
@@ -88,5 +106,9 @@ img{
     img{
         margin: 10px;
     }
+    .help{
+        margin: 2px;
+    }
+   
     
 }
