--- a/shivam.css
+++ b/shivam.css
@@ -20,9 +20,11 @@
 }
 img{
     width: 35px;
+    margin: 10px;
 }
 #icons{
-    width: 80px;
+    width: 100px;
+    margin: 10px;
 
 }
 .box2{
@@ -45,10 +47,14 @@ img{
     vertical-align: top;
     gap: 80px;
 }
+.subbox>div{
+    padding: 4px;
+}
 #social{
     text-align: center;
     vertical-align: middle;
     gap: 10px;
+    margin-top: 40px;
 }
 h3 a {
     color:silver;
