--- a/signinfirst.css
+++ b/signinfirst.css
@@ -1,14 +1,16 @@
 body{
-    background-color: rgb(120, 175, 223);
+    background-color: white;
 }
 .signi{
-    width: 350px;
+    width: 300px;
     height: 450px;
     margin-top: 20px;
-    margin-left: 30%;
+    margin-left: 35%;
     padding: 20px;
     background-color:rgb(247, 243, 235);
     border-radius: 3%;
+    text-align: center;
+    
 }
 input{
     width: 260px;
@@ -16,7 +18,19 @@ input{
     margin: 5px;
    background-color: gainsboro;
    margin-left: 10px;
+   font-size: 0.75rem;
+    font-family: Lato,sans-serif;
+     color: silver;
 }
+img{
+    width: 35px;
+}
+a {
+    color:rgb(176, 182, 236);
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    }
 .btn{
     width: 260px;
     height: 50px;
@@ -43,10 +57,10 @@ input{
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    margin-left: 10px;
+    margin-right: 20px;
 }
 .line{
-    width: 250px;
+    width: 270px;
 }
 button a {
     color: white;
@@ -57,10 +71,10 @@ button a {
 
 @media(max-width:800px){
     .signi{
-    width: 300px;
+    width: 250px;
     height: 450px;
     margin-top: 20px;
-    margin-left: 15%;
+    margin-left: 25%;
     padding: 20px;
     background-color:rgb(247, 243, 235);
     border-radius: 3%;
@@ -92,10 +106,10 @@ input{
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    margin-left: 10px;
+    margin-right: 30px;
 }
 .line{
-    width: 200px;
+    width: 220px;
 }
 
 }
