--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -5,7 +5,7 @@
     margin: 0;
 }
 div{
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 body{
     color: rgba(0, 0, 0, 0.87);
@@ -22,7 +22,7 @@ body{
     display: flex;
     justify-content: space-between;
     width: 80%;
-    margin: auto;
+    margin: 120px auto;
 }
 
 /* left_part */
