--- a/CSS/creataccount.css
+++ b/CSS/creataccount.css
@@ -1,115 +1,54 @@
-body{
-    background-color: white;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
 }
 .signi{
-    width: 300px;
-    height: 450px;
-    margin-top: 20px;
-    margin-left: 35%;
+    width: 25%;
+    height: 350px;
+    margin: 70px auto 20px auto;
     padding: 20px;
     background-color:rgb(247, 243, 235);
     border-radius: 3%;
     text-align: center;
-    
+    border: 1px solid red;
 }
 input{
-    width: 260px;
+    width: 90%;
     height: 50px;
-    margin: 5px;
-   background-color: gainsboro;
-   margin-left: 10px;
-   font-size: 0.75rem;
-    font-family: Lato,sans-serif;
-     color: silver;
+    margin: 10px auto;
+    text-align: center;
+    font-size: 15px;
 }
 img{
     width: 35px;
 }
-a {
+a{
     color:rgb(176, 182, 236);
-    text-align: center;
     text-decoration: none;
-    font-size: 14px;
-    }
+}
 .btn{
-    width: 260px;
-    height: 50px;
     background-color:rgb(98, 185, 240);
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
 }
-#myForm >div{
-    display: grid;
-    grid-template-rows: 50% 50% 50%;
-}
-.submitbtn{
-    margin-left: 10px;
+.btn:hover{
+    background-color:rgb(46, 160, 231);
 }
 .apple{
-    width: 260px;
-    height: 50px;
     background-color:rgb(12, 12, 12);
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
-    margin-right: 20px;
 }
-.line{
-    width: 270px;
+.apple:hover{
+    background-color: rgb(70, 70, 70);
 }
 button a {
     color: white;
     text-align: center;
     text-decoration: none;
-    }
-
-
-@media(max-width:800px){
-    .signi{
-    width: 250px;
-    height: 450px;
-    margin-top: 20px;
-    margin-left: 25%;
-    padding: 20px;
-    background-color:rgb(247, 243, 235);
-    border-radius: 3%;
-}
-input{
-    display: flex;
-    flex-direction: row;
-    width: 200px;
-    height: 50px;
-    margin: 5px;
-   background-color: gainsboro;
-}
-.btn{
-    width: 200px;
-    height: 50px;
-    background-color:rgb(98, 185, 240);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-}
-.apple{
-    width: 200px;
-    height: 50px;
-    background-color:rgb(12, 12, 12);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    margin-right: 30px;
-}
-.line{
-    width: 220px;
-}
-
 }
