--- a/CSS/signin.css
+++ b/CSS/signin.css
@@ -1,11 +1,13 @@
-body{
-    background-color: white;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
 }
 #myForm{
-    width: 420px;
-    height: 500px;
-    margin-top: 20px;
-    margin-left: 30%;
+    width: 25%;
+    height: 310px;
+    margin: 70px auto 20px auto;
     padding: 20px;
     background-color:rgb(247, 243, 235);
     border-radius: 3%;
@@ -13,25 +15,25 @@ body{
 }
 input{
     display: flex;
-    flex-direction: row;
-    width: 350px;
+    width: 80%;
     height: 50px;
-    margin: 5px;
-   background-color: gainsboro;
-   margin-left: 30px;
-   font-size: 0.75rem;
-    font-family: Lato,sans-serif;
-     color: silver;
+    margin: 10px auto;
+    text-align: center;
+    font-size: 16px;
 }
 .btn{
-    width: 220px;
-    height: 60px;
+    width: 100%;
+    height: 50px;
     background-color:rgb(98, 185, 240);
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
+    justify-content: center;
+    font-weight: bold;
+}
+.btn:hover{
+    background-color:rgb(60, 165, 230);
 }
 img{
     width: 35px;
@@ -46,33 +48,8 @@ img{
     margin-left: 30px;
 }
 @media(max-width:800px){
-    #myForm{
-    width: 350px;
-    height: 400px;
-    margin-top: 20px;
-    margin-left: 25%;
-    padding: 20px;
-    background-color:rgb(247, 243, 235);
-    border-radius: 3%;
-}
 input{
     display: flex;
     flex-direction: row;
-    width: 300px;
-    height: 50px;
-    margin: 5px;
-   background-color: gainsboro;
-   margin-left: 30px;
 }
-.btn{
-    width: 170px;
-    height: 60px;
-    background-color:rgb(98, 185, 240);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-}
-
 }
