--- a/CSS/signin.css
+++ b/CSS/signin.css
@@ -13,7 +13,7 @@
     border-radius: 3%;
     text-align: center;
 }
-input{
+#myForm input{
     display: flex;
     width: 80%;
     height: 50px;
