--- a/CSS/creataccount.css
+++ b/CSS/creataccount.css
@@ -13,7 +13,7 @@
     border-radius: 3%;
     text-align: center;
 }
-.signi input{
+input{
     width: 90%;
     height: 50px;
     margin: 10px auto;
