--- a/CSS/productReview.css
+++ b/CSS/productReview.css
@@ -3,12 +3,12 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 body{
     color: rgba(0, 0, 0, 0.87);
     margin: 0;
     font-size: 12px;
-    /* font-family: Lato,sans-serif; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     line-height: 1.43;
@@ -26,6 +26,11 @@ body{
 /* left container */
 #leftContainer{
     width: 48%;
+    height: 500px;
+    overflow-y: scroll;
+}
+#leftContainer::-webkit-scrollbar {
+    display: none;
 }
 #leftTop{
     display: flex;
@@ -72,7 +77,7 @@ body{
     -webkit-box-orient: vertical;
 }
 #optionButton{
-    border: 1px solid rgb(90, 87, 87);
+    border: 1px solid rgb(223, 223, 223);
     padding: 15px;
     margin: 18px 0px;
     border-radius: 5px;
@@ -80,6 +85,7 @@ body{
 .buttonBox{
     display: flex;
     justify-content: space-between;
+    gap: 15px;
 }
 .buttonTitle{
     font-size: 15px;
@@ -88,7 +94,7 @@ body{
 }
 .buttons{
     border: 1px solid rgb(90, 87, 87);
-    width: 14%;
+    width: 75px;
     height: 60px;
     display: flex;
     justify-content: center;
@@ -96,6 +102,9 @@ body{
     text-align: center;
     border-radius: 5px;
     cursor: pointer;
+}
+.buttons:hover{
+    background-color: rgb(245, 245, 245);
 }
 .buttonBox > div:first-child{
     border-radius: 50%;
@@ -116,11 +125,13 @@ body{
     align-items: center;
     font-size: 18px;
     cursor: pointer;
+    border: 1px solid rgb(223, 223, 223);
+    border-radius: 5px;
 }
-#cartButton{
+.cartButtonCss{
     width: 68%;
 }
-#cartButton button{
+.cartButtonCss button{
     width: 100%;
     padding: 12px 0;
     background-color: #5eb2d9;
@@ -142,7 +153,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 1px solid rgb(90, 87, 87);
+    border: 1px solid rgb(223, 223, 223);
     border-radius: 5px;
 }
 #descriptionBox{
@@ -157,7 +168,6 @@ body{
     text-align: justify;
 
 }
-/* ---------------------------------------------------------------------------- */
 .textGreyColor{
     color: rgb(90, 87, 87);
 }
@@ -172,4 +182,49 @@ body{
 }
 #boldSub{
     font-weight: bold;
+}
+#selectOptions{
+    border: 1px solid rgb(228, 228, 228);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0px;
+    left:10%;
+    width: 80%;
+    margin: auto;
+    border-radius: 5px;
+    background-color: whitesmoke;
+}
+#options960px{
+    width: 28%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#options960px button{
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgb(190, 190, 190);
+    border-radius: 5px;
+}
+#optionsJS{
+    position: fixed;
+    bottom: 50px;
+    left: 10%;
+    background-color: whitesmoke;
+    width: 80%;
+    display: none;
+}
+@media (max-width: 960px) {
+    #golabalProduct{
+        display: flex;
+        flex-direction: column;
+    }
+    #leftContainer{
+        width: 100%;
+    }
+    #rightContainer{
+        display: none;
+    }
 }
